--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@ function savelogin(){
     if (userName == 'Mark' && password == 'Mark@123') {
         window.location.href = "download_result_FINAL.html";
     }
+    else if(userName == 'Admin' && password == 'Admin@123') {
+        window.location.href = "users.html";
+    }
     else{
         alert('Username or password invalid !!');
     }
