--- a/download_result_FINAL.html
+++ b/download_result_FINAL.html
@@ -7,105 +7,78 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         h1 {
-            text-align: center;
-            color: #4CAF50;
+            margin-bottom: 20px;
         }
 
-        form {
-            max-width: 600px;
-            margin: 0 auto 20px;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #f9f9f9;
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            /* align-items: center; */
         }
 
-        label {
-            font-weight: bold;
+        .form-group {
+            margin-bottom: 10px;
         }
 
-        input[type="file"] {
-            margin: 10px 0;
-        }
-
-        button {
-            background-color: #4CAF50;
+        .settings-container {
+            display: none;
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 300px;
+            height: 90%;  /* Adjust height to allow for scrolling */
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            border: none;
-            padding: 10px 20px;
+            padding: 20px;
+            z-index: 1000;
+            overflow-y: auto; /* Enable scrolling when content overflows */
+        }
+
+        .settings-container input {
+            margin-bottom: 10px;
+        }
+
+        #settings-icon {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 24px;
             cursor: pointer;
-            border-radius: 5px;
-            font-size: 16px;
-            margin-right: 10px;
+            color: blue;
         }
 
-        button:hover {
-            background-color: #45a049;
-        }
-
-        #downloadBtn {
-            display: inline-block;
+        #result {
             margin-top: 20px;
-            text-decoration: none;
+        }
+
+        #compareButton {
+            margin-top: 10px;
+            cursor: pointer;
             background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
+            border: none;
             border-radius: 5px;
-            font-size: 16px;
-            text-align: center;
         }
 
-        #downloadBtn:hover {
-            background-color: #45a049;
-        }
-
-        .result-container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-        }
-
-        .no-discrepancy {
-            text-align: center;
-            color: #4CAF50;
-            font-size: 18px;
-            font-weight: bold;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
+        #downloadResultBtn {
             margin-top: 20px;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #4CAF50;
+            cursor: pointer;
+            background-color: #2196F3;
             color: white;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
         }
     </style>
-     <script>
+    <script>
         // Check username and password on page load
         window.onload = function () {
             // Get username and password from local storage
@@ -121,24 +94,98 @@
     </script>
 </head>
 <body>
-    <h1>Billing Comparison Tool</h1>
-    <form id="upload-form">
-        <label for="file1">Upload DMS File:</label><br>
+    <h1 style="color: green;">Billing Comparison Tool</h1>
+
+    <div class="form-container">
+        <!-- IMEI File Upload & Compare Button -->
+        <h2>IMEI Product Comparison</h2>
+        <label for="file1">Upload DMS IMEI File:</label><br>
         <input type="file" id="file1" accept=".xlsx, .xls" required><br>
-        <label for="file2">Upload Miracle File:</label><br>
+        <label for="file2">Upload Miracle IMEI File:</label><br>
         <input type="file" id="file2" accept=".xlsx, .xls" required><br>
+
+        <!-- Compare Button -->
+        <button type="button" id="compareImeiBtn">Compare IMEI Files</button>
+
+        <!-- Non-IMEI File Upload & Compare Button -->
+        <h2>Non-IMEI Product Comparison</h2>
         <label for="nonImeiFile1">Upload DMS Non-IMEI File:</label><br>
         <input type="file" id="nonImeiFile1" accept=".xlsx, .xls" required><br>
         <label for="nonImeiFile2">Upload Miracle Non-IMEI File:</label><br>
-        <input type="file" id="nonImeiFile2" accept=".xlsx, .xls" required><br><br>
-        <button type="button" id="compareBtn">Compare IMEI Files</button>
+        <input type="file" id="nonImeiFile2" accept=".xlsx, .xls" required><br>
+
+        <!-- Compare Button -->
         <button type="button" id="compareNonImeiBtn">Compare Non-IMEI Files</button>
-    </form>
+    </div>
+
+    <!-- Result Display Section -->
     <div id="result" class="result-container"></div>
+
+    <!-- Download Result Button -->
+    <button id="downloadResultBtn" style="display:none;">Download Result</button>
+
+    <!-- Settings Icon -->
+    <div id="settings-icon" onclick="toggleSettings()">⚙️</div>
+
+    <!-- Settings Panel -->
+    <div class="settings-container" id="settings-panel">
+        <h3>Enter Column Numbers</h3>
+
+        <!-- IMEI Column Numbers -->
+        <h4>IMEI Columns</h4>
+        <label for="dms-imei-dealer-code">Dealer Code (DMS IMEI):</label>
+        <input type="text" id="dms-imei-dealer-code" placeholder="e.g. 2" /><br>
+
+        <label for="dms-imei-code">IMEI Code (DMS IMEI):</label>
+        <input type="text" id="dms-imei-code" placeholder="e.g. 3" /><br>
+
+        <label for="dms-imei-quantity">Quantity (DMS IMEI):</label>
+        <input type="text" id="dms-imei-quantity" placeholder="e.g. 4" /><br>
+
+        <label for="miracle-imei-dealer-code">Dealer Code (Miracle IMEI):</label>
+        <input type="text" id="miracle-imei-dealer-code" placeholder="e.g. 2" /><br>
+
+        <label for="miracle-imei-code">IMEI Code (Miracle IMEI):</label>
+        <input type="text" id="miracle-imei-code" placeholder="e.g. 3" /><br>
+
+        <label for="miracle-imei-quantity">Quantity (Miracle IMEI):</label>
+        <input type="text" id="miracle-imei-quantity" placeholder="e.g. 4" /><br>
+
+        <!-- Non-IMEI Column Numbers -->
+        <h4>Non-IMEI Columns</h4>
+        <label for="dms-non-imei-dealer-code">Dealer Code (DMS Non-IMEI):</label>
+        <input type="text" id="dms-non-imei-dealer-code" placeholder="e.g. 2" /><br>
+
+        <label for="dms-non-imei-code">Product Code (DMS Non-IMEI):</label>
+        <input type="text" id="dms-non-imei-code" placeholder="e.g. 3" /><br>
+
+        <label for="dms-non-imei-quantity">Quantity (DMS Non-IMEI):</label>
+        <input type="text" id="dms-non-imei-quantity" placeholder="e.g. 4" /><br>
+
+        <label for="miracle-non-imei-dealer-code">Dealer Code (Miracle Non-IMEI):</label>
+        <input type="text" id="miracle-non-imei-dealer-code" placeholder="e.g. 2" /><br>
+
+        <label for="miracle-non-imei-code">Product Code (Miracle Non-IMEI):</label>
+        <input type="text" id="miracle-non-imei-code" placeholder="e.g. 3" /><br>
+
+        <label for="miracle-non-imei-quantity">Quantity (Miracle Non-IMEI):</label>
+        <input type="text" id="miracle-non-imei-quantity" placeholder="e.g. 4" /><br>
+
+        <!-- Close Settings -->
+        <button type="button" onclick="toggleSettings()">Close Settings</button>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
     <script>
-        document.getElementById('compareBtn').addEventListener('click', () => compareFiles('imei'));
+        // Toggle settings panel visibility
+        function toggleSettings() {
+            const settingsPanel = document.getElementById('settings-panel');
+            settingsPanel.style.display = settingsPanel.style.display === 'none' ? 'block' : 'none';
+        }
+
+        // Compare IMEI Files
+        document.getElementById('compareImeiBtn').addEventListener('click', () => compareFiles('imei'));
+        // Compare Non-IMEI Files
         document.getElementById('compareNonImeiBtn').addEventListener('click', () => compareFiles('nonImei'));
 
         function compareFiles(type) {
@@ -150,19 +197,23 @@
                 return;
             }
 
-            Promise.all([readExcelFile(file1), readExcelFile(file2)])
-                .then(([data1, data2]) => {
-                    const resultHTML = processComparison(data1, data2, type);
-                    document.getElementById('result').innerHTML = resultHTML;
+            // Get user-input column numbers for IMEI or Non-IMEI
+            const dmsDealerCodeColumn = parseInt(document.getElementById(type === 'imei' ? 'dms-imei-dealer-code' : 'dms-non-imei-dealer-code').value.trim()) - 1;
+            const dmsCodeColumn = parseInt(document.getElementById(type === 'imei' ? 'dms-imei-code' : 'dms-non-imei-code').value.trim()) - 1;
+            const dmsQuantityColumn = parseInt(document.getElementById(type === 'imei' ? 'dms-imei-quantity' : 'dms-non-imei-quantity').value.trim()) - 1;
 
-                    document.getElementById('downloadBtn')?.addEventListener('click', () => {
-                        downloadResultFromHTML();
-                    });
-                })
-                .catch(error => {
-                    console.error("Error processing files:", error);
-                    alert("Error processing files. Check console for details.");
-                });
+            const miracleDealerCodeColumn = parseInt(document.getElementById(type === 'imei' ? 'miracle-imei-dealer-code' : 'miracle-non-imei-dealer-code').value.trim()) - 1;
+            const miracleCodeColumn = parseInt(document.getElementById(type === 'imei' ? 'miracle-imei-code' : 'miracle-non-imei-code').value.trim()) - 1;
+            const miracleQuantityColumn = parseInt(document.getElementById(type === 'imei' ? 'miracle-imei-quantity' : 'miracle-non-imei-quantity').value.trim()) - 1;
+
+            Promise.all([readExcelFile(file1), readExcelFile(file2)]).then(([data1, data2]) => {
+                const resultHTML = processComparison(data1, data2, dmsDealerCodeColumn, dmsCodeColumn, dmsQuantityColumn, miracleDealerCodeColumn, miracleCodeColumn, miracleQuantityColumn, type);
+                document.getElementById('result').innerHTML = resultHTML;
+                document.getElementById('downloadResultBtn').style.display = 'block'; // Show download button
+            }).catch(error => {
+                console.error("Error processing files:", error);
+                alert("Error processing files. Check console for details.");
+            });
         }
 
         function readExcelFile(file) {
@@ -184,12 +235,12 @@
             });
         }
 
-        function processComparison(data1, data2, type) {
-            const dealerNamesMiracle = extractDealerNames(data2); // Extract dealer names from Miracle
-            const dealerNamesDms = extractDealerNames(data1); // Extract dealer names from DMS
+        function processComparison(data1, data2, dmsDealerCodeColumn, dmsCodeColumn, dmsQuantityColumn, miracleDealerCodeColumn, miracleCodeColumn, miracleQuantityColumn, type) {
+            const dealerNamesMiracle = extractDealerNames(data2, miracleDealerCodeColumn);
+            const dealerNamesDms = extractDealerNames(data1, dmsDealerCodeColumn);
 
-            const map1 = createMap(data1, type);
-            const map2 = createMap(data2, type);
+            const map1 = createMap(data1, dmsDealerCodeColumn, dmsCodeColumn, dmsQuantityColumn);
+            const map2 = createMap(data2, miracleDealerCodeColumn, miracleCodeColumn, miracleQuantityColumn);
 
             let discrepancies = [];
             const allKeys = new Set([...Object.keys(map1), ...Object.keys(map2)]);
@@ -246,16 +297,15 @@
                 `;
             });
 
-            resultHTML += `</tbody></table>
-                <a id="downloadBtn">Download Result</a>`;
+            resultHTML += `</tbody></table>`;
             return resultHTML;
         }
 
-        function extractDealerNames(data) {
+        function extractDealerNames(data, dealerCodeColumn) {
             const dealerNames = {};
             data.slice(1).forEach(row => {
-                const dealerCode = String(row[2] || '').trim(); // Dealer code (Column C)
-                const dealerName = String(row[1] || '').trim(); // Dealer name (Column B)
+                const dealerCode = String(row[dealerCodeColumn] || '').trim();
+                const dealerName = String(row[1] || '').trim(); // Assuming dealer name is in the 2nd column
                 if (dealerCode && dealerName) {
                     dealerNames[dealerCode] = dealerName;
                 }
@@ -263,13 +313,13 @@
             return dealerNames;
         }
 
-        function createMap(data, type) {
+        function createMap(data, dealerCodeColumn, codeColumn, quantityColumn) {
             const map = {};
 
             data.slice(1).forEach(row => {
-                const dealerCode = String(row[2] || '').trim();
-                const code = String(row[type === 'imei' ? 4 : 3] || '').trim();
-                const quantity = parseInt(row[type === 'imei' ? 5 : 4], 10);
+                const dealerCode = String(row[dealerCodeColumn] || '').trim();
+                const code = String(row[codeColumn] || '').trim();
+                const quantity = parseInt(row[quantityColumn], 10);
 
                 if (dealerCode && code && !isNaN(quantity)) {
                     const key = `${dealerCode}_${code}`;
@@ -280,18 +330,16 @@
             return map;
         }
 
-        function downloadResultFromHTML() {
-            const table = document.getElementById('resultTable');
-            if (!table) {
-                alert("No result data to download.");
-                return;
-            }
-
+        // Function to download result as Excel file
+        document.getElementById('downloadResultBtn').addEventListener('click', () => {
+            const resultTable = document.getElementById('resultTable');
+            const ws = XLSX.utils.table_to_sheet(resultTable);
             const wb = XLSX.utils.book_new();
-            const ws = XLSX.utils.table_to_sheet(table);
-            XLSX.utils.book_append_sheet(wb, ws, "Result");
-            XLSX.writeFile(wb, "ComparisonResult.xlsx");
-        }
+            XLSX.utils.book_append_sheet(wb, ws, "Comparison Result");
+
+            // Generate and download Excel file
+            XLSX.writeFile(wb, "Billing_Comparison_Result.xlsx");
+        });
     </script>
 </body>
 </html>
